<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddTaskFragment"
        android:padding="12dp">

        <TextView
            android:id="@+id/addTaskHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/poppins"
            android:text="@string/add_task_heading"
            android:textStyle="bold"
            android:textColor="@color/secondary"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/addTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/addTaskHeading"
            android:layout_marginTop="16dp"
            android:background="@drawable/app_border"
            android:fontFamily="@font/poppins"
            android:hint="@string/edit_text_title"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addTaskDesc"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@id/addTaskTitle"
            android:layout_marginTop="12dp"
            android:background="@drawable/app_border"
            android:fontFamily="@font/poppins"
            android:gravity="top"
            android:hint="@string/edit_text_desc"
            android:padding="12dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/addDateTimeContainerHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addTaskDesc"
            android:layout_marginTop="32dp"
            android:text="@string/date_time_heading"
            android:fontFamily="@font/poppins"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/addDateTimeContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/addDateTimeContainerHeading"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/addTextDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/deadline"
                android:fontFamily="@font/poppins"
                android:focusable="false"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:inputType="datetime"
                android:drawableEnd="@drawable/ic_calendar"
                android:drawablePadding="16dp"
                android:layout_marginEnd="16dp"/>

            <EditText
                android:id="@+id/addTextTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/time"
                android:fontFamily="@font/poppins"
                android:focusable="false"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:drawableEnd="@drawable/ic_clock"
                android:drawablePadding="16dp"
                android:layout_marginStart="16dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/radioGroupPriorityHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addDateTimeContainer"
            android:layout_marginTop="32dp"
            android:text="@string/radio_heading"
            android:fontFamily="@font/poppins"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:layout_below="@id/radioGroupPriorityHeading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/radioButtonLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/low"
                android:fontFamily="@font/poppins" />

            <RadioButton
                android:id="@+id/radioButtonMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mid"
                android:fontFamily="@font/poppins"/>

            <RadioButton
                android:id="@+id/radioButtonHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/high"
                android:fontFamily="@font/poppins"/>
        </RadioGroup>

        <TextView
            android:id="@+id/promiseText"
            android:layout_width="320dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/radioGroupPriority"
            android:layout_marginTop="96dp"
            android:text="@string/promise_text"
            android:fontFamily="@font/poppins"
            android:textSize="18sp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTaskFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:backgroundTint="@color/primary"
            android:tintMode="@color/white"
            android:src="@drawable/baseline_fingerprint_24"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/edit_fab" />

    </RelativeLayout>
</layout>